# ServiceManager

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindUCL.cmake  LemFlex.cmake  Make-Header.cmake  MakeHeader.cmake  WSRPCGen.cmake  cmdMakeHeader.cmake
cmd/: CMakeLists.txt  addsys.cc  lssys.cc
cmd/manager/: Backend.cc  Backend.hh  CMakeLists.txt  Manager.cc  Manager.hh  RPC.cc
cmd/mgr/: CMakeLists.txt  Manager.cc  Manager.hh
cmd/wsrpcgen/: CMakeLists.txt  gen.cc  scope.cc  wsrpcgen.cc  wsrpcgen.hh  wsrpcgen.l  wsrpcgen.y
doc/: Goals.md  Ports.md  Ports.rst
doc/manual/: CMakeLists.txt  index.7  service_bundle.5
doc/notes/: 2021-03-01-repo.md  index.md
hdr/eci/: .clang-tidy  Core.h  CxxUtil.hh  Event.hh  Logger.hh  Platform.h.in  Query.hh  SDNotify.hh  SQLite.h  WSRPC.hh
hdr/eci-daemon/: _sd-common.h
lib/: CMakeLists.txt
lib/eci/: CMakeLists.txt  Core.c  Event-EPoll.cc  Event-KQueue.cc  Event-Poll.cc  Logger.cc  Proc.cc  SQLite.c  WSRPC.cc  getInstancePropertiesComposed.sql  io.eComCloud.eci.IManager.x  io.eComCloud.init.x  queryGetInstancePropertiesComposed.sql
lib/eci-daemon/: CMakeLists.txt  macro.h  sd-daemon.c
share/: repositorySchema.sql  repository_schema.sql  serviceBundleSchema.json  volatileRepositorySchema.sql
test/: a.ucl  b.ucl
